    + Correction de la détection des erreurs des programmes 
    + L'onglet wifi n'affiche que les prises configurées dans le logiciel
    + Ajout de messages lors du traitement des informations du calendrier
    + Correction de l'écriture du calendrier lors de la modification d'évènements
    + Ajout du champ IPR pour la configuration wifi
    + Valeur par défaut de l'alarme de 60°

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 15 11:01:14 CEST 2014


Cultibox (2.0.06) precise; urgency=low
    + Correction du script de preinstallation et de la commande xattr pour mac os x

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Oct 13 13:21:43 CEST 2014

Cultibox (2.0.05) precise; urgency=low
    + Correction de la copie des fichiers templates sur la carte SD
    + Correction de la gestion des radios boutons des prises
    + Correction du chargement automatique des logs et de la fermeture de la fenêtre
    + Messages personnalisés pour les blockUI
    + Passage en AJAX de l'onglet Assistant

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 10 14:00:00 CEST 2014


Cultibox (2.0.04) precise; urgency=low
    + Remise en fonction des ancres
    + Affichage des messages d'utilisation du wizard dans la boite de message

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Oct 9 16:56:56 CEST 2014


Cultibox (2.0.03) precise; urgency=low
    + Correction de la page Configuration et du formatage de la carte SD
    + Correction de la page programme concernant les jeux de programmes dans les options avancées
    + Suppression des itérations de l'url localhost pour rendre le soft compatible avec le module wifi
    + Correction et vérification de l'écriture de la carte SD lors du changement de configuration (ajout des jeux de programme et du fichier plugidx)
    + Diverses correction pour stabiliser la 2.0.02

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 1 10:10:26 CEST 2014


Cultibox (2.0.02) precise; urgency=low