@@ -10,6 +10,19 @@ if((isset($_GET['type']))&&(!empty($_GET['type']))) {
     $type=$_GET['type'];
 }
 
+if((isset($_GET['date_from']))&&(!empty($_GET['date_from']))) {
+    $datefrom=$_GET['date_from'];
+} else {
+    $datefrom="";
+}
+
+if((isset($_GET['date_to']))&&(!empty($_GET['date_to']))) {
+    $dateto=$_GET['date_to'];
+} else {
+    $dateto="";
+}
+
+
 if((!isset($type))||(empty($type))) {
     echo json_encode("0");
 } else {
@@ -18,7 +31,7 @@ if((!isset($type))||(empty($type))) {
     }
     @mkdir("../../../tmp/export");
 
-     logs\export_table_csv("$type",$main_error);
+     logs\export_table_csv("$type",$datefrom,$dateto,$main_error);
      $file="../../../tmp/export/$type.csv";
      if (($file != "") && (file_exists("./$file"))) {
         echo json_encode($type.".csv");
