@@ -10,6 +10,7 @@ Cultibox (2.0.07) precise; urgency=low
     + Correction de l'écriture du calendrier lors de la modification d'évènements
     + Ajout du champ IPR pour la configuration wifi
     + Valeur par défaut de l'alarme de 60°
+    + Possibilité de choisir une période pour l'export des logs
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 15 11:01:14 CEST 2014
 
